--- a/css/variables.css
+++ b/css/variables.css
@@ -123,7 +123,7 @@
     --z-sidebar: 350;
     --z-header: 200;
     --z-overlay: 300;
-    --z-drawer: 360;
+    --z-drawer: 380;
     --z-modal: 400;
     --z-tooltip: 500;
 
